--- a/package.json
+++ b/package.json
@@ -9,17 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "lucide-react": "^0.563.0",
     "next": "15.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "lucide-react": "^0.563.0",
     "zustand": "^5.0.11"
   },
   "devDependencies": {
     "eslint": "^8.57.0",
     "eslint-config-next": "15.1.6",
-    "tailwindcss": "^3.4.17",
-    "postcss": "^8.4.35",
-    "autoprefixer": "^10.4.17"
+    "postcss": "^8.4.35"
   }
 }
