--- a/package.json
+++ b/package.json
@@ -9,18 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "15.1.7",
+    "@tailwindcss/postcss": "^4.1.18",
+    "autoprefixer": "^10.4.24",
+    "geist": "^1.7.0",
+    "lucide-react": "^0.563.0",
+    "next": "14.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "^4.1.18",
-    "@tailwindcss/postcss": "^4.1.18",
-    "autoprefixer": "^10.4.24",
-    "lucide-react": "^0.563.0",
     "zustand": "^5.0.11"
   },
   "devDependencies": {
     "eslint": "^8.57.0",
-    "eslint-config-next": "15.1.7",
+    "eslint-config-next": "14.1.0",
     "postcss": "^8.4.35"
+  },
+  "engines": {
+    "node": ">=18.17.0"
   }
 }
