--- a/package.json
+++ b/package.json
@@ -9,20 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@tailwindcss/postcss": "^4.1.18",
-    "autoprefixer": "^10.4.24",
     "geist": "^1.7.0",
     "lucide-react": "^0.563.0",
     "next": "14.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "^4.1.18",
     "zustand": "^5.0.11"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.24",
     "eslint": "^8.57.0",
     "eslint-config-next": "14.1.0",
-    "postcss": "^8.4.35"
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.13"
   },
   "engines": {
     "node": ">=18.17.0"
